@@ -1,6 +1,11 @@
 # ChangeLog file for sql/src/backends/monet5
 # This file is updated with mchangelog (Gentoo echangelog bastard script)
 
+  20 Aug 2009; Fabian Groffen <fabian@cwi.nl> database.c, database.h,
+  monetdb.c, monetdb.1:
+  Always put created databases under maintenance, they have to be explicitly
+  released after creating and performing the initialisation steps by the DBA
+
 *Aug2009
 
   31 Jul 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
